crates/test-files/fixtures/compile_errors/return_addition_with_mixed_types.fe
contract Foo {
    pub fn bar(x: u256, y: i32) -> u256 {
        return x + y
    }
}
